WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30636
[GTK] Double click detection in EventSender DRT is not correct
https://bugs.webkit.org/show_bug.cgi?id=30636
Summary
[GTK] Double click detection in EventSender DRT is not correct
Alejandro G. Castro
Reported
2009-10-21 10:57:10 PDT
It is something like this: if (lastClickPositionX != lastMousePositionX && lastClickPositionY != lastMousePositionY) In my opinioin it should be something like this: if (lastClickPositionX != lastMousePositionX || lastClickPositionY != lastMousePositionY)
Attachments
First patch proposal
(1.28 KB, patch)
2009-10-21 11:07 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Fixed Changelog comment
(1.28 KB, patch)
2009-10-21 11:18 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2009-10-21 11:07:08 PDT
Created
attachment 41578
[details]
First patch proposal
Alejandro G. Castro
Comment 2
2009-10-21 11:18:00 PDT
Created
attachment 41585
[details]
Fixed Changelog comment
Xan Lopez
Comment 3
2009-10-21 11:19:33 PDT
Comment on
attachment 41585
[details]
Fixed Changelog comment Yep.
WebKit Commit Bot
Comment 4
2009-10-21 12:03:37 PDT
Comment on
attachment 41585
[details]
Fixed Changelog comment Clearing flags on attachment: 41585 Committed
r49913
: <
http://trac.webkit.org/changeset/49913
>
WebKit Commit Bot
Comment 5
2009-10-21 12:03:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug