2009-10-21  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Fixed the double click condition, it is not double click if
        we move in just in one direction.
        https://bugs.webkit.org/show_bug.cgi?id=30636

        * WebKitTools/DumpRenderTree/gtk/EventSender.cpp:

Canonical link: https://commits.webkit.org/41367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49913 268f45cc-cd09-0410-ab3c-d52691b4dbfc