WebKitTools/DumpRenderTree/gtk/EventSender.cpp
@@ -123,7 +123,7 @@ static JSValueRef contextClickCallback(JSContextRef context, JSObjectRef functio
 static void updateClickCount(int /* button */)
 {
     // FIXME: take the last clicked button number and the time of last click into account.
-    if (lastClickPositionX != lastMousePositionX && lastClickPositionY != lastMousePositionY)
+    if (lastClickPositionX != lastMousePositionX || lastClickPositionY != lastMousePositionY)
         clickCount = 1;
     else
         clickCount++;
